# goptical

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  README.md  import_zemax.hpp  io_import_zemax.cpp
.github/workflows/: ccpp.yml
cmd/: CMakeLists.txt  generic_lens.cpp
data/nikkor-28mmf1.4-afs/: nikkor-28mmf1.4-afs.txt
data/nikkor-400mm-f2.8E/: JP2019-152887_Example03P-Nikon-400mm-f2.8FL.txt
doc/texinfo/: goptical.texi
documentation/: goptical-manual.rst  goptical-reference.rst
examples/: CMakeLists.txt
examples/curve_model/: CMakeLists.txt  usercurve.cpp
examples/freeglut-3.0.0/: CMakeLists.txt
examples/freeglut-3.0.0/src/: fg_callbacks.c  fg_cursor.c  fg_display.c  fg_ext.c  fg_font.c  fg_font_data.c  fg_gamemode.c  fg_geometry.c  fg_gl2.c  fg_init.c  fg_input_devices.c  fg_internal.h  fg_joystick.c  fg_main.c  fg_menu.c  fg_misc.c  fg_overlay.c  fg_spaceball.c  fg_state.c  fg_stroke_mono_roman.c  fg_stroke_roman.c  fg_structure.c  fg_teapot.c  fg_teapot_data.h  fg_videoresize.c  fg_window.c  gles_stubs.c
examples/generic/: CMakeLists.txt  generic_lens.cpp  nikkor-matsui-28mmf3.5-ex1.txt  nikkor-wakamiya-50mmf1.4-ex1.txt  nikkor-wakamiya-50mmf1.4-mdl.txt  nikkor-z-58mmf0.95_ex1.txt  nikkor_sato_58mmf1.4_ex2.txt
examples/hierarchical_design/: newton.cpp
examples/nikkor_50_wakamiya_mdl/: CMakeLists.txt  nikkor_wakamiya_50_1_4_mdl.cpp
examples/nikkor_58mm_sato/: CMakeLists.txt  nikkor_58mm_sato.cpp
examples/render/: CMakeLists.txt  app.hpp  newton.hpp  opengl_app.cpp
examples/render_3d/: CMakeLists.txt  app.hpp  io_renderer_opengl.cpp  main - Copy.cpp  main.cpp  newton.hpp  opengl_app.cpp  renderer_opengl.hpp  x11_app.cpp
examples/segmented_mirror/: segmented.cpp
examples/simple_refractor/: refractor.cpp
examples/tessar_lens/: tessar.cpp
goptical-1.0_Original/examples/curve_model/: usercurve.cc
goptical-1.0_Original/examples/hierarchical_design/: newton.cc
goptical-1.0_Original/examples/render_3d/: opengl_app.cc  x11_app.cc
goptical-1.0_Original/examples/segmented_mirror/: segmented.cc
goptical-1.0_Original/examples/simple_refractor/: refractor.cc
goptical-1.0_Original/examples/tessar_lens/: tessar.cc
goptical-1.0_Original/goptical_core/src/: analysis_focus.cc  analysis_pointimage.cc  analysis_rayfan.cc  analysis_spot.cc  (+79 more)
include/gsl/: gsl_math.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  analysis_focus.cpp  analysis_pointimage.cpp  analysis_rayfan.cpp  analysis_spot.cpp  curve_array.cpp  curve_asphere.cpp  curve_base.cpp  curve_composer.cpp  curve_conic.cpp  curve_conic_base.cpp  curve_flat.cpp  curve_foucault.cpp  curve_grid.cpp  curve_parabola.cpp  curve_polynomial.cpp  curve_rotational.cpp  curve_sphere.cpp  curve_spline.cpp  curve_zernike.cpp  data_discrete_set.cpp  data_grid.cpp  data_interpolate_1d_.hxx  data_plot.cpp  data_sample_set.cpp  data_set.cpp  data_set1d.cpp  deriv.c  drand48.cpp  ffs.c  io_import_bclaff.cpp  io_import_oslo.cpp  io_import_zemax.cpp  io_renderer.cpp  io_renderer_2d.cpp  io_renderer_axes.cpp  io_renderer_dxf.cpp  io_renderer_gd.cpp  io_renderer_opengl.cpp  io_renderer_plplot.cpp  (+53 more)
src/design/: telescope_cassegrain.cpp  telescope_newton.cpp
test/core/: CMakeLists.txt  test_2d_plot.cpp  test_aspheric.cpp  test_coordinates.cpp  test_discrete_set.cpp  test_materials.cpp  test_patterns.cpp  test_rendering.cpp  test_shapes.cpp
test/design/: test_cassegrain.cpp
(+264 files in other folders)
